--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@ node_modules/
 dist/
 npm-debug.log
 yarn-error.log
+
+.idea/workspace.xml
+
+.idea/vcs.xml
+
+.idea/workspace.xml
+
+.idea/workspace.xml
+
+.idea/workspace.xml
