element & main view
added base element components and route params to main for single
ticker.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "element-ui": "^1.2.7",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "0.0.5-beta.2",
     "normalize-css": "^2.3.1",
