--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@ yarn-error.log
 .idea/workspace.xml
 
 .idea/workspace.xml
+
+.idea/workspace.xml
+
+.idea/workspace.xml
+
+.idea/workspace.xml
+
+.idea/workspace.xml
+
+.idea/workspace.xml
