--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "normalize-css": "^2.3.1",
     "skeleton-css": "^2.0.4",
     "vue": "^2.2.1",
+    "vue-chartjs": "^2.5.6",
     "vue-router": "^2.3.0",
     "vue-socket.io": "^2.1.0"
   },
