--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "element-ui": "^1.2.7",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "0.0.5-beta.2",
+    "moment": "^2.18.1",
     "normalize-css": "^2.3.1",
     "skeleton-css": "^2.0.4",
     "vue": "^2.2.1",
     "vue-chartjs": "^2.5.6",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.3.0",
     "vue-socket.io": "^2.1.0"
   },
