--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,5 @@ npm-debug.log
 yarn-error.log
 
 .idea/workspace.xml
-
 .idea/vcs.xml
-
-.idea/workspace.xml
-
-.idea/workspace.xml
-
-.idea/workspace.xml
+.idea/misc.xml
